appId: de.htwg.moba.medi_support
---
# Precondition: App started and on Homescreen
- tapOn: "Search"
- tapOn: "Type to search"
- inputText: "aua"
- tapOn: "meine lunge tut weh\naua"
